fixed alignment

--- a/StockNet/Frontender/css/main.css
+++ b/StockNet/Frontender/css/main.css
@@ -68,6 +68,7 @@ ul {
     font-weight: 400;
     margin-bottom: 30px;
     margin-top: 20px;
+    ;
 }
  header {
     display: flex;
@@ -91,14 +92,14 @@ ul {
 .title{
 
     position: absolute;
-    text-align: center;
     top: 0%;
     bottom: 0%;
     right: 0%;
     left: 0%;
     color: black;
     padding: 20% 20% 20% 20%;
-    
+    display: inline-block;
+    text-align: center;
 }
 .aplusbttn{
     padding-top: 9px;
@@ -106,10 +107,11 @@ ul {
     background: #EE8572;
     height: 30px;
     width: 150px;
-    margin-left: 4em;
     margin-top: 3em;
     border-radius: 45px;
     font-weight: 700;
+    display: inline-block;
+    text-align: center;
 }
 
 
@@ -141,13 +143,14 @@ ul {
 footer{
     text-align: center ;
     color: lavender;
+    
 }
 
-.ccompte{
+.orange-container h2{
     transform: skewY(-3deg);
-    margin-left: -50%;
-    color: white
-
+    color: white;
+    text-align: center;
+    margin-left: -220px;
 }
 .ctabttn{
     padding-top: 10px;
@@ -155,13 +158,16 @@ footer{
     background: #292929;
     height: 30px;
     width: 150px;
-    margin-left: 18em;
+    /margin-left: 18em;
     margin-top: 3em;
     border-radius: 45px;
     text-align: center;
     font-weight: 700;
     transform: skewY(-3deg);
     margin-left: 10%;
+    margin-left: -220px;
+    display: inline-block
+    
 }
 .pc-icon{
     margin-top: 20px;
@@ -193,3 +199,43 @@ h1{
     font-size: 83%;
     line-height: 1.2em;
 }
+nav ul{
+    position: fixed;
+    width: 60%;
+    top: 0;
+    right: 0;
+    text-align: left;
+    background: rgba(36, 41, 44);
+    height: 100%;
+    z-index: 7;
+    padding-top 3em;
+
+}
+nav ul li a {
+    display: block;
+    width: 100%;
+    padding: 1em 2em;
+    background-color: rgb(52, 59, 63);
+    
+}
+nav ul li a:hover {
+    color: white;
+    background-color: rgb(82, 95, 102);
+}
+.exit-btn{
+    margin-top: 1.3em;
+    margin-bottom: 0.85em;
+    text-align: right;
+    padding: 0 1.4em;
+    
+}
+.exit-btn img{
+    width: 15px;
+    cursor: pointer;
+}
+.orange-container ul{
+    display: inline-block;
+    text-align: center;
+    margin-left: -220px;
+}
+
